--- a/Shoppier/res/values/strings.xml
+++ b/Shoppier/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="skip"><u>Skip Login</u></string>
     <string name="title_activity_splash">SplashActivity</string>
     <string name="title_activity_list_select">ListSelect</string>
+    <string name="title_activity_groc_list">GrocListActivity</string>
+    <string name="item_name">Item Name</string>
 
 </resources>
