Added a gui for adding an item to the database.

--- a/Shoppier/res/values/strings.xml
+++ b/Shoppier/res/values/strings.xml
@@ -14,11 +14,15 @@
     <string name="title_activity_splash">SplashActivity</string>
     <string name="title_activity_list_select">ListSelect</string>
     <string name="title_activity_groc_list">GrocListActivity</string>
-    <string name="item_name">Item Name</string>
+    <string name="item_name">Item name</string>
     <string name="title_activity_search">SearchActivity</string>
     <string name="namelabel">Name: </string>
     <string name="brandlabel">Brand: </string>
     <string name="title_activity_single_searable_item_view">SingleSearableItemView</string>
     <string name="space"> : </string>
+    <string name="add">Add</string>
+    <string name="add_to_db">Add an item to database</string>
+    <string name="item_brand">Item brand</string>
+    <string name="item_category">Item category</string>
 
 </resources>
