Add to database drop downs are now being updated from the SQL Server database. Added place holders for item qty and price.

--- a/Shoppier/res/values/strings.xml
+++ b/Shoppier/res/values/strings.xml
@@ -31,5 +31,7 @@
     <string name="dismiss">Dismiss</string>
     <string name="list_name">List name</string>
     <string name ="title_barcode">Barcode Scanner</string>
+    <string name="add_location">Location:</string>
+    <string name="quanity">Qty:</string>
 
 </resources>
